concluindo a responsividade do site

--- a/barber.css
+++ b/barber.css
@@ -15,10 +15,12 @@
 
 body{
     width: 100vw;
-    height: 100vh;
+    height: 100%;
     background-color: #32190F;
     font-size: 16px;
     color: white;
+    display: flex;
+    align-items: center;
 }
 
 header{
@@ -460,12 +462,15 @@ footer{
 @media (min-width:375px) and (max-width:1055px){
     body{
         width: 100vw;
-        height: 100vh;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
     }
 
     header{
         height: 60%;
-        background-size: contain;
+        background-size: cover;
+        background-attachment: scroll;
         display: flex;
     }
 
@@ -478,6 +483,7 @@ footer{
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-top: 25px;
     }
 
     .titulo h1{
@@ -530,7 +536,7 @@ footer{
     .menuhorarios{
         display: flex;
         flex-direction: column;
-        height: 100vh;
+        height: 800px;
     }
 
     .textBemvindo p{
@@ -544,6 +550,7 @@ footer{
     .horarios {
         flex: 1;
         display: flex;
+        height: 100vh;
         flex-direction: column;
     }
 
@@ -566,7 +573,8 @@ footer{
     }
 
     .serviços{
-        height: 100vh;
+        position: relative;
+        height: 1500px;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -584,12 +592,11 @@ footer{
         height: 100%;
         display: flex;
         flex-direction: column;
-
     }
 
-    .serviços .menuServiços ul {
+    .serviços .menuServiços ul{
         width: 100%;
-        height: 100vh;
+        height: 100%;
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
@@ -597,19 +604,77 @@ footer{
         list-style: none;
     }
 
-    .containerProfissionais{
-        width: 100vw;
-        height: 100vh;
-        display: flex;
+    .serviços .menuServiços ul li div{
+        width: 100%;
+        position: relative;
     }
 
-    .containerCards{
+    .serviços .menuServiços ul div img{
+        width: 230px;
+        height: 230px;
+    }
+
+    .containerProfissionais{
+        width: 100vw;
+        height: 100%;
         display: flex;
         flex-direction: column;
     }
 
+    .containerCards{
+        width: 100vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+    }
+
+    .containerProfissionais .TituloProfissionais{
+        font-size:1rem ;
+        padding: 10px;
+    }
+
+
+    .containerProfissionais .cardsProfiss{
+        width: 100%;
+    }
+
+    
+
     .mp{
         height: 100vh;
+        width: 95vw;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .mpstyle{
+        height: 90%;
+        width: 100%;
+    }
+
+    .mp h2{
+        font-size: 1.5rem;
+        padding-bottom: 20px;
+    }
+
+    footer{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer p{
+        padding: 10px;
+    }
+
+    footer .redesSociais{
+        width: 100%;
+        font-size: 1rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
     }
 }
 
