--- a/barber.css
+++ b/barber.css
@@ -20,6 +20,7 @@ body{
     font-size: 16px;
     color: white;
     display: flex;
+    flex-direction: column;
     align-items: center;
 }
 
@@ -433,9 +434,14 @@ footer{
     height: 100px;
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     background-color: #15121374;
+}
+
+footer p{
+    padding: 10px;
 }
 
 .redesSociais{
@@ -487,21 +493,21 @@ footer{
     }
 
     .titulo h1{
-        font-size: 2rem;
+        font-size: 2.5rem;
     }
 
     .titulo h2{
-        font-size: 1rem;
+        font-size: 1.8rem;
     }
     
     .titulo span{
         padding: 0%;
         height: 7%;
-        font-size: 0.6rem;
+        font-size: 0.8rem;
     }
 
     .icons{
-        font-size: 0.8rem;
+        font-size: 1rem;
         color: #ffce0c;
         padding: 10px;
     }
@@ -536,35 +542,40 @@ footer{
     .menuhorarios{
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         height: 800px;
     }
 
     .textBemvindo p{
         font-size: 1rem;
+        padding: 5px;
+        text-align: center;
+    }
+
+    .textBemvindo h2{
+        margin-top: 10px;
     }
 
     .imgshorarios{
         display: flex;
+        width: 100%;
     }
 
     .horarios {
-        flex: 1;
-        display: flex;
-        height: 100vh;
-        flex-direction: column;
+        width: 100%;
     }
 
     .horarios h2{
         font-size: 1.5rem;
-
     }
 
     .listhr ul{
-        height: 100%;
+        height: 220px;
         width: 100%;
         line-height: 2em;
         font-family: var(--fonte-secundaria);
-        font-size: 0.5rem;
+        font-size: 0.7rem;
         display: flex;
         flex-direction: column;
         align-items: center;
