--- a/barber.css
+++ b/barber.css
@@ -430,6 +430,10 @@ nav ul li a{
     height: 80%;
 }
 
+.gps{
+    display: none;
+}
+
 footer{
     height: 100px;
     width: 100vw;
@@ -670,6 +674,21 @@ footer p{
     .mp h2{
         font-size: 1.5rem;
         padding-bottom: 20px;
+    }
+
+    .gps{
+        display: block;
+    }
+
+    .gps button{
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 1rem;
+        background-color: rgba(255, 255, 255, 0.284);
+        color: white;
+        border-radius: 5px;
     }
 
     footer{
