--- a/barber.css
+++ b/barber.css
@@ -40,7 +40,7 @@ header{
 
 .sombra{
     position: absolute;
-    background-color: rgba(0, 0, 0, 0.309);
+    background-color: rgba(0, 0, 0, 0.477);
     width: 100%;
     height: 100%;
     
@@ -557,6 +557,7 @@ footer p{
         font-size: 1rem;
         padding: 5px;
         text-align: center;
+        padding: 10px;
     }
 
     .textBemvindo h2{
@@ -689,6 +690,7 @@ footer p{
         background-color: rgba(255, 255, 255, 0.284);
         color: white;
         border-radius: 5px;
+        margin-bottom: 10px;
     }
 
     .gps a{
